Fix z-index issues where the nav dropdown menu was below the section icons. Add a large z-index so that the tender tab is above the page content even on small windows.

--- a/app/stylesheets/design/_page.scss
+++ b/app/stylesheets/design/_page.scss
@@ -39,6 +39,7 @@ ul.bold_links a {
   top: 100px;
   right: 0;
   width: image-width("icons/tender.png");
+  z-index: 5000;
   }
 
 .clear { clear: both; }
